# mango-feeds

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  rust-toolchain.toml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
.github/workflows/: build_test.yml  docker-publish.yml  fly-deploy.yml  release.yml  test.yml
cd/: fills.toml  orderbook.toml  ws.toml
chaindata_standalone/: .gitignore  Cargo.toml  SAMPLEFLOWS.md
chaindata_standalone/src/: account_write.rs  get_program_account.rs  main.rs  metrics.rs  metrics_dump.rs  replay_slot_account_stream.rs  router_impl.rs  standalone.rs
ci/: rust-version.sh
connector/: Cargo.toml  README.md
connector-mango/: Cargo.toml
connector-mango/src/: main.rs
connector-raw/: Cargo.toml
connector-raw/src/: main.rs
connector/benches/: chaindata_bench.rs
connector/examples/: call_gpa_gma_example.rs  combined_example_consumer.rs  config-yellowstone-grpc-testing.json  demo_account_fetcher.rs  geyser_example_consumer.rs  snapshot_example.rs  websocket_consumer.rs  websocket_example_consumer.rs
connector/src/: account_fetcher.rs  account_fetchers.rs  account_write_filter.rs  chain_data.rs  debouncer.rs  feeds_chain_data_fetcher.rs  foorpc.rs  grpc_plugin_source.rs  lib.rs  metrics.rs  snapshot.rs  solana_rpc_minimal.rs  websocket_source.rs
data-streams/: Cargo.toml
data-streams/src/: account_write_filter.rs  chain_data.rs  grpc_plugin_source.rs  lib.rs  metrics.rs  websocket_source.rs
geyser-plugin-grpc/: Cargo.toml
geyser-plugin-grpc/src/: compression.rs  geyser_plugin_grpc.rs
lib/: Cargo.toml
lib/src/: account_write_filter.rs  chain_data.rs  fill_event_filter.rs  fill_event_postgres_target.rs  grpc_plugin_source.rs  lib.rs  metrics.rs  orderbook_filter.rs  postgres_target.rs  serum.rs  websocket_source.rs
service-mango-accounts/: Cargo.toml
service-mango-crank/: Cargo.toml
service-mango-crank/src/: blockhash_poller.rs  event_queue_filter.rs  main.rs  mango_v4_perp_crank_sink.rs  openbook_crank_sink.rs  transaction_builder.rs  transaction_sender.rs
service-mango-fills/: Cargo.toml  README.md  config-devnet.toml  example-config.toml  template-config.toml
service-mango-fills/conf/: template-config.toml
service-mango-fills/src/: fill_event_filter.rs  fill_event_postgres_target.rs  lib.rs  main.rs
service-mango-orderbook/: Cargo.toml  README.md
service-mango-orderbook/conf/: test-config.toml
service-mango-orderbook/src/: lib.rs  main.rs  orderbook_filter.rs
service-mango-pnl/: Cargo.toml  template-config.toml
service-mango-pnl/conf/: example-config.toml
service-mango-pnl/src/: main.rs
service-mango-swaps/: Cargo.toml
service-mango-swaps/conf/: example-config.toml  template-config.toml
service-mango-swaps/src/: main.rs
ts/client/scripts/: fills.ts  orderbook.ts
ts/client/src/: fills.ts  index.ts  orderbook.ts  util.ts
