[workspace]
members = [
        "connector",
        "lib",
        "service-mango-crank",
        "service-mango-fills",
        "service-mango-pnl",
        "service-mango-orderbook",
]

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip-default-v18.0.0" }

[workspace.dependencies]
solana-rpc = "~1.16.1"
solana-client = "~1.16.1"
solana-account-decoder = "~1.16.1"
solana-sdk = "~1.16.1"
solana-logger = "~1.16.1"

anchor-spl = "0.27.0"
anchor-lang = "0.27.0"
anchor-client = "0.27.0"

mango-v4 = { path = "/Users/stefan/mango/code/mango-v4/programs/mango-v4" }
mango-v4-client = { path = "/Users/stefan/mango/code/mango-v4/lib/client" }

serum_dex = { git = "https://github.com/jup-ag/openbook-program", branch = "feat/expose-things", features = ["no-entrypoint"] }
# this works in solana-rpc-client-simple; solves anchor 0.28.0 issue
#serum_dex = { git = "https://github.com/openbook-dex/program.git", tag = "v0.5.10", default-features=false, features = ["no-entrypoint", "program"] }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

fixed = { git = "https://gitlab.com/ckamm/fixed.git", branch = "v1.11.0-mango" }
bs58 = "0.5"
base64 = "0.21.0"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
toml = "0.5"
bytes = "1.0"
itertools = "0.10.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.17"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
ws = "^0.9.2"
async-channel = "1.6"
async-trait = "0.1"
bytemuck = "1.7.2"
jemallocator = "0.3.2"
chrono = "0.4.23"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.9.0"
postgres-types = { version = "0.2", features = ["array-impls", "derive", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
rustls = "0.20.8"
# postgres_query hasn't updated its crate in a while
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }


