[workspace]
members = [
        "connector",
        "chaindata_standalone"
]
resolver = "2"

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip-default-v18.0.0" }

[workspace.dependencies]
solana-rpc = "1.17"
solana-client = "1.17"
solana-account-decoder = "1.17"
solana-sdk = "1.17"
solana-logger = "1.17"

yellowstone-grpc-client = { version = "1.15.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.17" }
yellowstone-grpc-proto = { version = "1.14.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.17" }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

bs58 = "0.5"
base64 = "0.21.0"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
toml = "0.5"
bytes = "1.0"
itertools = "0.10.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.17"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
ws = "^0.9.2"
async-channel = "1.6"
async-trait = "0.1"
bytemuck = "1.7.2"
jemallocator = "0.3.2"
chrono = "0.4.23"
clap = { version = "3.1.8", features = ["derive", "env"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
tokio-stream = { version = "0.1.9"}
rustls = "0.20.8"

warp = "0.3"

