[package]
name = "chaindata_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { workspace = true }
tokio-stream = { workspace = true }


log = { workspace = true }
anyhow = { workspace = true }

itertools = { workspace = true }
futures = { workspace = true }

async-channel = { workspace = true }
async-trait = { workspace = true }

mango-feeds-connector = { path = "../connector" }
# note: this version does not relax the solana version
geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.13+solana.1.17.28", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }
yellowstone-grpc-proto = "1.13.0"
#yellowstone-grpc-client = "1.14.0"

solana-sdk = { workspace = true }
