[package]
name = "chaindata_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { workspace = true }
tokio-stream = { workspace = true }


log = { workspace = true }
anyhow = { workspace = true }

itertools = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

lz4 = "1.24.0"
base64 = "0.21.7"


bincode = "1.3.3"
async-trait = { workspace = true }

mango-feeds-connector = { path = "../connector" }
# note: this version does not relax the solana version
geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.13+solana.1.17.28", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }
yellowstone-grpc-proto = "1.13.0"
#yellowstone-grpc-client = "1.14.0"

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client-api = "1.17"
solana-account-decoder = "1.17"

