[package]
name = "mango-feeds-connector"
version = "0.2.1"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Listen to Solana account updates via geyser or websockets"

[lib]

[features]
default = []

[dependencies]
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }

solana-rpc = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }

tokio = { workspace = true }
rustls = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }

itertools = { workspace = true }

futures = { workspace = true }

async-channel = { workspace = true }
async-trait = { workspace = true }

warp = { workspace = true }

# 1.8.0+solana.1.16.1
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
