[package]
name = "mango-feeds-connector"
version = "0.3.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Listen to Solana account updates via geyser or websockets"

[lib]

[[bench]]
name = "chaindata_bench"
harness = false

[features]
default = []

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"

# note: avoid solana-rpc dependency
solana-rpc-client = "1.17"
solana-rpc-client-api = "1.17"
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
rustls = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
smallvec = "1.13.2"

itertools = { workspace = true }

futures = { workspace = true }

async-channel = { workspace = true }
async-trait = { workspace = true }

warp = { workspace = true }

# 1.9.0+solana.1.16.1
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
# cannot upgrade due to clap_lex requirement MSRV 1.74
criterion = "0.4.0"
