[package]
name = "solana-geyser-connector-data-streams"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"

[lib]


[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

solana-rpc = "~1.14.9"
solana-client = "~1.14.9"
solana-account-decoder = "~1.14.9"
solana-sdk = "~1.14.9"

arrayref = "*"
bytemuck = "*"
fixed = { version = "*", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
native-tls = "0.2"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

tonic = { version = "0.6", features = ["tls", "compression"] }
prost = "0.9"

bs58 = "*"
base64 = "*"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
bytes = "1.0"
itertools = "0.10.5"
chrono = "0.4.23"

futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"

async-stream = "0.2"
async-channel = "1.6"
async-trait = "0.1"

warp = "0.3"

[build-dependencies]
tonic-build = { version = "0.6", features = ["compression"] }

