[package]
name = "mango-feeds-lib"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]


[dependencies]
mango-feeds-connector = { path = "../connector" }

jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true, features = ["ws", "http"] }


solana-rpc = "~1.14.9"
solana-client = "~1.14.9"
solana-account-decoder = "~1.14.9"
solana-sdk = "~1.14.9"

serum_dex = { git = "https://github.com/jup-ag/openbook-program", branch = "feat/expose-things", features = ["no-entrypoint"] }

mango-v4 = { workspace = true }
mango-v4-client = { workspace = true }

bytemuck = { version = "^1.7.2", features = ["min_const_generics"] }
fixed = { tag = "program-v0.16.0", git = "https://github.com/blockworks-foundation/mango-v4.git" }

tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.9.0"
postgres-types = { version = "0.2", features = ["array-impls", "derive", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# postgres_query hasn't updated its crate in a while
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

bs58 = "0.4"
base64 = "0.21.0"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
bytes = "1.0"
itertools = "0.10.5"
chrono = "0.4.23"

futures = "0.3.17"
futures-core = "0.3"

async-channel = "1.6"
async-trait = "0.1"

[build-dependencies]
tonic-build = { version = "0.6", features = ["compression"] }

