[package]
name = "mango-feeds-lib"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]


[dependencies]

solana-client = "~1.16.7"
solana-account-decoder = "~1.16.7"
solana-sdk = "~1.16.7"

serum_dex = { workspace = true }

mango-v4 = { workspace = true }
mango-v4-client = { workspace = true }
fixed = { workspace = true }

bytemuck = { workspace = true }

tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
postgres-types = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }

# postgres_query hasn't updated its crate in a while
postgres_query = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

bs58 = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }

futures = { workspace = true }
futures-core = { workspace = true }

async-channel = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.6", features = ["compression"] }

