[package]
name = "service-mango-crank"
version = "0.1.0"
authors = ["Maximilian Schneider <max@mango.markets>"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
mango-feeds-lib = { path = "../lib" }
mango-feeds-connector = { path = "../connector" }

solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }

anchor-lang = { workspace = true }
anchor-client = { workspace = true }

mango-v4 = { workspace = true }
mango-v4-client = { workspace = true }

serum_dex = { workspace = true }

bs58 = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
ws = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
bytemuck = { workspace = true }

jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }

