[package]
name = "service-mango-fills"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>", "Maximilian Schneider <max@mango.markets>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
mango-feeds-lib = { path = "../lib" }

solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }

anchor-lang = { workspace = true }
anchor-client = { workspace = true }

mango-v4 = { workspace = true }
mango-v4-client = { workspace = true }

serum_dex = { workspace = true }

bs58 = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
ws = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
bytemuck = { workspace = true }
jemallocator = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }

tokio-postgres = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }
postgres_query = { workspace = true }
