[package]
name = "service-mango-pnl"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"

[dependencies]
solana-geyser-connector-lib = { path = "../lib" }
solana-logger = "=1.10.35"
solana-sdk = "=1.10.35"
log = "0.4"
anyhow = "1.0"
toml = "0.5"
bytemuck = "1.7.2"
jsonrpsee = { version = "0.9.0", features = ["http-server"] }

async-trait = "0.1"
fixed = { version = "1.9.0", features = ["serde"] }
bs58 = "0.3.1"
tokio = { version = "1", features = ["full"] }

serde = "1.0.130"
serde_derive = "1.0.130"
mango-v4 = { git = "ssh://git@github.com/blockworks-foundation/mango-v4", branch = "dev" }
client = { git = "ssh://git@github.com/blockworks-foundation/mango-v4", branch = "dev" }
anchor-lang = "0.25.0"
anchor-client = "0.25.0"
