[package]
name = "service-mango-pnl"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
mango-feeds-lib = { path = "../lib" }

solana-client = "1"
solana-logger = "1"
solana-sdk = "1"

anchor-lang = "0.27.0"
anchor-client = "0.27.0"

mango-v4 = { tag = "program-v0.16.0", git = "https://github.com/blockworks-foundation/mango-v4.git"}
mango-v4-client = { tag = "program-v0.16.0", git = "https://github.com/blockworks-foundation/mango-v4.git" }

serum_dex = { git = "https://github.com/jup-ag/openbook-program", branch = "feat/expose-things", features = ["no-entrypoint"] }

log = "0.4"
anyhow = "1.0"
toml = "0.5"
bytemuck = "1.7.2"
jsonrpsee = { version = "0.9.0", features = ["http-server"] }

async-trait = "0.1"
fixed = { version = "1.9.0", features = ["serde"] }
bs58 = "0.3.1"
tokio = { version = "1", features = ["full"] }

serde = "1.0.130"
serde_derive = "1.0.130"
