[package]
name = "service-mango-pnl"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
mango-feeds-lib = { path = "../lib" }
mango-feeds-connector = { path = "../connector" }

solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }

anchor-lang = { workspace = true }
anchor-client = { workspace = true }

mango-v4 = { workspace = true }
mango-v4-client = { workspace = true }

serum_dex = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
bytemuck = { workspace = true }

jsonrpsee = { version = "0.9.0", features = ["http-server"] }

async-trait = { workspace = true }
fixed = { workspace = true }
bs58 = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
